--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+@layer components{
+    .header_top__icon_wrapper {
+        @apply bg-gray-200 rounded-md p-[6px] text-[14px] cursor-pointer
+         hover:bg-accent hover:text-white;
+    }
 }
